[project]
name = "cait-api"
version = "0.1.2"
authors = [
    { name = "iamlostshe", email = "vanamelcikov7275@gmail.com" },
]
maintainers = [
    { name = "iamlostshe", email = "vanamelcikov7275@gmail.com" },
]
license = "MIT"
readme = "README.md"
dependencies = [
    "aiohttp>=3.12.15",
    "lxml>=6.0.1",
]
keywords = [
    "pars",
    "parsing",
    "api",
    "framework",
    "wrapper",
    "asyncio",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/iamlostshe/cait-api"
Issues = "https://github.com/iamlostshe/cait-api/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Ошибки связанные с кирилицей
  "RUF001", "RUF002", "RUF003",

  # TODO
  "TD003", "FIX002",

  # Cравнение магических значений
  "PLR2004",

  # Работа с датой
  "DTZ005",
]
